--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
-    "jquery": "^3.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "axios": "1.4.0",
+    "bootstrap": "5.3.0",
+    "jquery": "3.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.25.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.9"
+    "@types/react": "18.0.37",
+    "@types/react-dom": "18.0.11",
+    "@vitejs/plugin-react-swc": "3.0.0",
+    "eslint": "8.38.0",
+    "eslint-plugin-react": "7.25.3",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.3.4",
+    "vite": "4.3.9"
   }
 }
